feat: quick implementation of converter before k-means use

--- a/src/app/canvas-analyser/canvas-analyser.component.html
+++ b/src/app/canvas-analyser/canvas-analyser.component.html
@@ -1,2 +1,6 @@
 <p>canvas-analyser works!</p>
-<canvas id="viewport" width="490" height="490"></canvas>
+<canvas id="viewport"></canvas>
+<div style="display: inline-block;">
+    <div id="palette" style="height: 500px;width: 500px; display: grid"></div>
+    <div id="palettergb" style="height: 500px;width: 500px; display: grid"></div>
+</div>
