--- a/src/app/color-block/color-block.component.html
+++ b/src/app/color-block/color-block.component.html
@@ -1,3 +1,3 @@
-<div class="color-block" [style.background-color]="hexaCode">
+<div (click)="copyColor()" class="color-block" [style.background-color]="hexaCode">
     <p class="color-text">{{hexaCode}}</p>
 </div>
