style: add global app color panel

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
+
+// COLORS START
+
+// Honey and Thyme
+@c-honey : #acb029;
+// Countryside
+@color : #a6ab2b;
+// Densetsu Green
+@c-densetsu-green : #949d29;
+// Witch Brew
+@color : #7e8926;
+// Muddy Green
+@c-muddy-green : #66711f;
+// Reptile Revenge
+@color : #535616;
+// Avocado Stone
+@color : #4a3c0e;
+// Meatloaf
+@c-meatloaf : #6d3812;
+// Picante
+@color : #a04833;
+// Tandoori
+@color : #bb5e51;
+// Morocco
+@c-Morocco : #c37267;
+// Whisky
+@color : #c28076; // button back
+// Grand Sunset
+@color : #be8980;
+// Nude Lips
+@c-nude-lips : #b79088;
+// Cortex
+@c-cortex : #af948f; // background
+
+// COLORS END
+
+// VAR START
+
+@c-body: @c-cortex;
+@c-btn-boder: @c-muddy-green;
+@c-btn-back: @c-Morocco;
+@c-canvas-border: @c-meatloaf;
+
+// VAR END
+
+// BODY
+
+body {
+    background-color: @c-body;
+}
