feat: implement new components and prepare option panel and comment unused code before clean

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
 
 </style>
 
+<app-custom-canvas></app-custom-canvas>
 <app-canvas-analyser></app-canvas-analyser>
+<app-options-panel></app-options-panel>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
