style: change components name and implement style to btns

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
 
 </style>
 
-<app-custom-canvas></app-custom-canvas>
+<app-chromaticus-canvas></app-chromaticus-canvas>
+
 <app-canvas-analyser></app-canvas-analyser>
 <app-options-panel></app-options-panel>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
