--- a/src/app/options-panel/options-panel.component.html
+++ b/src/app/options-panel/options-panel.component.html
@@ -1,1 +1,3 @@
-<app-custom-btn title="test"></app-custom-btn>
+<app-chromaticus-btn title="test"></app-chromaticus-btn>
+<app-chromaticus-btn title="very long long text"></app-chromaticus-btn>
+<app-chromaticus-btn title="SELECT AN IMAGE"></app-chromaticus-btn>
