--- a/src/app/color-block/color-block.component.less
+++ b/src/app/color-block/color-block.component.less
@@ -5,6 +5,7 @@
     align-items: center;
 
     .color-text {
+        text-transform: uppercase;
         width: 100%;
         text-align: center;    
         font-weight: bold;
