feat: add new buttons for panel control's image analysis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
 
 </style>
 
-<app-chromaticus-canvas></app-chromaticus-canvas>
+<!-- <app-chromaticus-canvas></app-chromaticus-canvas>
 
-<app-canvas-analyser></app-canvas-analyser>
+<app-canvas-analyser></app-canvas-analyser> -->
 <app-options-panel></app-options-panel>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
