--- a/src/app/chromaticus-select-btn/chromaticus-select-btn.component.less
+++ b/src/app/chromaticus-select-btn/chromaticus-select-btn.component.less
@@ -1,7 +1,7 @@
 @import "../../styles.less";
 
 
-button {
+select {
     margin: 2px;
     display: block;
     max-height: fit-content;
@@ -13,6 +13,6 @@ button {
     font-family: inherit;
 }
 
-button:hover{
+select:hover{
     background-color: lighten(@c-btn-back, 10%);
 }
