--- a/src/app/options-panel/options-panel.component.less
+++ b/src/app/options-panel/options-panel.component.less
@@ -1,8 +1,13 @@
 @import "../../styles.less";
 
 :host {
-    display: block;
+    display: flex;
     width: 500px;
     height: 500px;
     border: 5px solid @c-panel-border;
+
+    .launch-analyse {
+        display: flex;
+        align-self: flex-end;
+    }
 }
