--- a/src/app/options-panel/options-panel.component.html
+++ b/src/app/options-panel/options-panel.component.html
@@ -1,4 +1,3 @@
-<app-chromaticus-btn title="launch analyse"></app-chromaticus-btn>
 <app-chromaticus-btn title="SELECT AN IMAGE"></app-chromaticus-btn>
 <app-toggle-btn StateOne="quantity" StateTwo="quality" (actualState)="getState($event)"></app-toggle-btn>
 
@@ -8,6 +7,8 @@
     title="loop nbr"
     [options]="['none', '1', '5', '10', '20']"
     ></app-chromaticus-select-btn>
-    <app-chromaticus-range-btn label="luminosity" max="40"></app-chromaticus-range-btn>
-    <app-chromaticus-range-btn label="saturation" max="40"></app-chromaticus-range-btn>
+    <app-chromaticus-range-btn label="luminosity" max="40" (actualRange)="getLuminosity($event)"></app-chromaticus-range-btn>
+    <app-chromaticus-range-btn label="saturation" max="40" (actualRange)="getSaturation($event)"></app-chromaticus-range-btn>
 </div>
+
+<app-chromaticus-btn class="launch-analyse" (action)="launchAnalyse()" title="launch analyse"></app-chromaticus-btn>
