--- a/src/app/chromaticus-btn/chromaticus-btn.component.html
+++ b/src/app/chromaticus-btn/chromaticus-btn.component.html
@@ -1,2 +1,2 @@
-<button [textContent]="title" (click)="eventTrigger($event)">
+<button [disabled]="disable" [textContent]="title" (click)="eventTrigger($event)">
 </button>
