--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,11 @@
 :host {
     display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+    .canvas-block {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
