--- a/src/app/loop-loader/loop-loader.component.html
+++ b/src/app/loop-loader/loop-loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="show">
+<div *ngIf="show" class="loader-block">
     <div id="loader" class="rotating">
     </div>
     <p>{{stepText}}</p>
