--- a/src/app/options-panel/options-panel.component.html
+++ b/src/app/options-panel/options-panel.component.html
@@ -29,4 +29,4 @@
     To reduce analyse type and get pertinent results, you can limit loop to 5 and put luminosity and/or saturation to 20.
 </p>
 
-<app-chromaticus-btn [disable]="disable" class="launch-analyse" (action)="launchAnalyse()" title="launch analyse"></app-chromaticus-btn>
+<app-chromaticus-btn [disable]="disable" class="launch-analyse" (action)="launchAnalyse()" title="launch analysis"></app-chromaticus-btn>
