--- a/src/styles.less
+++ b/src/styles.less
@@ -49,4 +49,5 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: lighten(@c-body, 10%);
+    margin: 0px;
 }
