--- a/src/app/loop-loader/loop-loader.component.less
+++ b/src/app/loop-loader/loop-loader.component.less
@@ -1,8 +1,16 @@
 :host {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(0%, 0%);
+
+    .loader-block {
+        display: flex;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 100vw;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 #loader {
