style: add border radius to custom elements

--- a/src/app/chromaticus-select-btn/chromaticus-select-btn.component.less
+++ b/src/app/chromaticus-select-btn/chromaticus-select-btn.component.less
@@ -11,6 +11,7 @@ select {
     border: 2px solid lighten(@c-btn-boder, 5%);
     transition: 0.3s;
     font-family: inherit;
+    border-radius: 10px;
 }
 
 select:hover{
