--- a/src/app/chromaticus-btn/chromaticus-btn.component.less
+++ b/src/app/chromaticus-btn/chromaticus-btn.component.less
@@ -11,6 +11,7 @@ button {
     border: 2px solid lighten(@c-btn-boder, 5%);
     transition: 0.3s;
     font-family: inherit;
+    border-radius: 10px;
 }
 
 button:hover{
