--- a/src/app/color-block/color-block.component.less
+++ b/src/app/color-block/color-block.component.less
@@ -3,6 +3,7 @@
     width: 100px;    
     display: flex;
     align-items: center;
+    border-radius: 10px;
 
     .color-text {
         text-transform: uppercase;
