--- a/src/app/options-panel/options-panel.component.less
+++ b/src/app/options-panel/options-panel.component.less
@@ -8,6 +8,7 @@
     border: 5px solid @c-panel-border;
     max-width: 400px;
     height: fit-content;
+    border-radius: 10px;
 
     .launch-analyse {
         display: flex;
